--- a/index.html
+++ b/index.html
@@ -1,54 +1,88 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>TactiBoard 11</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #0f172a;
-      color: white;
-      text-align: center;
-    }
+<meta charset="UTF-8">
+<title>TactiBoard 11</title>
 
-    h1 {
-      margin-top: 20px;
-    }
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
-    .controls {
-      margin: 20px;
-    }
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background: #0f172a;
+  color: white;
+  text-align: center;
+}
 
-    select, button {
-      padding: 8px;
-      margin: 5px;
-      border-radius: 6px;
-      border: none;
-    }
+h1 {
+  margin-top: 20px;
+}
 
-    .field {
-      width: 350px;
-      height: 550px;
-      background: linear-gradient(#15803d, #166534);
-      margin: auto;
-      border-radius: 12px;
-      position: relative;
-      border: 4px solid white;
-    }
+.controls {
+  margin: 20px;
+}
 
-    .player {
-      position: absolute;
-      width: 80px;
-      height: 35px;
-      background: white;
-      color: black;
-      border-radius: 6px;
-      text-align: center;
-      line-height: 35px;
-      font-size: 12px;
-    }
-  </style>
+select, button {
+  padding: 10px;
+  margin: 5px;
+  border-radius: 8px;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+button {
+  background: #22c55e;
+  color: white;
+}
+
+.field {
+  width: 900px;
+  height: 500px;
+  background: linear-gradient(to right, #166534, #15803d);
+  margin: auto;
+  border-radius: 15px;
+  position: relative;
+  border: 5px solid white;
+  box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.line {
+  position: absolute;
+  width: 2px;
+  height: 100%;
+  background: white;
+  left: 50%;
+}
+
+.circle {
+  position: absolute;
+  width: 120px;
+  height: 120px;
+  border: 2px solid white;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.player {
+  position: absolute;
+  width: 110px;
+  height: 45px;
+  background: white;
+  color: black;
+  border-radius: 10px;
+  text-align: center;
+  line-height: 45px;
+  font-size: 13px;
+  font-weight: bold;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.4);
+}
+</style>
 </head>
+
 <body>
 
 <h1>⚽ TactiBoard 11</h1>
@@ -57,37 +91,59 @@
   <select id="formation">
     <option value="433">4-3-3</option>
     <option value="442">4-4-2</option>
+    <option value="352">3-5-2</option>
+    <option value="532">5-3-2</option>
   </select>
-  <button onclick="generateFormation()">Aplicar</button>
-  <button onclick="exportImage()">Exportar Imagem</button>
+  <button onclick="generateFormation()">Aplicar Formação</button>
+  <button onclick="downloadPDF()">Download PDF</button>
 </div>
 
-<div class="field" id="field"></div>
+<div class="field" id="field">
+  <div class="line"></div>
+  <div class="circle"></div>
+</div>
 
 <script>
 function generateFormation() {
   const field = document.getElementById("field");
-  field.innerHTML = "";
+  field.innerHTML = '<div class="line"></div><div class="circle"></div>';
 
   const formation = document.getElementById("formation").value;
-
   let positions = [];
 
   if (formation === "433") {
     positions = [
-      [135, 500], // GR
-      [30, 420], [110, 420], [190, 420], [270, 420],
-      [70, 320], [135, 320], [200, 320],
-      [40, 200], [135, 200], [230, 200]
+      [50,250],
+      [200,80],[200,200],[200,320],[200,440],
+      [400,120],[400,250],[400,380],
+      [650,80],[650,250],[650,420]
     ];
   }
 
   if (formation === "442") {
     positions = [
-      [135, 500],
-      [30, 420], [110, 420], [190, 420], [270, 420],
-      [30, 300], [110, 300], [190, 300], [270, 300],
-      [90, 180], [180, 180]
+      [50,250],
+      [200,80],[200,200],[200,320],[200,440],
+      [400,80],[400,200],[400,320],[400,440],
+      [650,170],[650,330]
+    ];
+  }
+
+  if (formation === "352") {
+    positions = [
+      [50,250],
+      [200,150],[200,250],[200,350],
+      [400,60],[400,160],[400,250],[400,340],[400,440],
+      [650,180],[650,320]
+    ];
+  }
+
+  if (formation === "532") {
+    positions = [
+      [50,250],
+      [200,60],[200,150],[200,250],[200,350],[200,440],
+      [400,150],[400,250],[400,350],
+      [650,180],[650,320]
     ];
   }
 
@@ -102,8 +158,16 @@ function generateFormation() {
   });
 }
 
-function exportImage() {
-  alert("Na próxima versão vamos exportar automaticamente como imagem 😉");
+async function downloadPDF() {
+  const { jsPDF } = window.jspdf;
+  const field = document.getElementById("field");
+
+  const canvas = await html2canvas(field);
+  const imgData = canvas.toDataURL("image/png");
+
+  const pdf = new jsPDF("landscape");
+  pdf.addImage(imgData, "PNG", 10, 10, 270, 150);
+  pdf.save("tactiboard-formacao.pdf");
 }
 
 generateFormation();
